# cloud-assignment-3

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  locustfile.py  main.py  pack.py  pyproject.toml  setup.py
.github/workflows/: deploy.yml
public/: .gitignore
public/data/: archive.yaml  gallery.yaml  navigation.yaml  portal.yaml  site.yaml
public/images/ist/noel/: 24_1212_2.HEIC  24_1212_3.HEIC
public/images/nguyenpanda/favicon/: site.webmanifest
src/api/: routes.py
src/core/: config.py
terraform/: .gitignore  alb.tf  autoscaling.tf  cloudfront.tf  ecr.tf  ecs.tf  iam.tf  outputs.tf  provider.tf  security_groups.tf  variables.tf  vpc.tf
