[project]
name = "nguyenpanda-com"
version = "0.0.0"
description = "`nguyenpanda.com`"
authors = [
    { name = "Tuong Nguyen Ha", email = "hatuongnguyen@0107gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "gdown>=5.2.1",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.44.0",
    "gunicorn>=21.2.0",
]

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
]

# [tool.uv.workspace]
# members = [
#     "lib/PandaHttpd",
# ]

[tool.uv.sources]
# nguyenpanda-httpd = { workspace = true, editable = true }
# nguyenpanda-httpd = { path = "../../model/PandaHttpd", editable = true }

